Completed all pages. Left with touching up and alignment issues

--- a/style.css
+++ b/style.css
@@ -876,20 +876,31 @@ input[type="submit"] {
 /* Claim Button */
 .challBtn {
     display: flex;
-    flex-direction: row;
-    padding-top: 30px;
     justify-content: center;
+    align-items: center;
 }
 
-.challBtn .challBtn1 {
-    width: 50%;
+.challBtn form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.challBtn input {
+    color: #f5f5f5;
+    font-weight: 600;
+    background-color: #2A456B;
+    border: none;
+    border-radius: 20px;
+}
+
+.challBtn input:hover {
     background-color: #D5B255;
-    color: #f5f5f5;
 }
 
-.challBtn1:hover {
+/* Change color when button is clicked */
+.challBtn input:active {
     background-color: grey;
-    color: #f5f5f5;
 }
 
 /* (CONTACT PAGE) styles.css.....................................................*/
